load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "elune",
    url = "https://github.com/meorawr/elune/archive/f051f75a3e963130c2d1ad98f56868bfc6b2798d.tar.gz",
    sha256 = "1685a740991d86d45acd07bde00af99191de3cfa0e5a8c0c11c2095c7fcbe480",
    strip_prefix = "elune-f051f75a3e963130c2d1ad98f56868bfc6b2798d",
    build_file = "@//:bazel/elune.bazel",
)

http_archive(
    name = "expat",
    url = "https://github.com/libexpat/libexpat/archive/654d2de0da85662fcc7644a7acd7c2dd2cfb21f0.tar.gz",
    sha256 = "81e02291cffb1cbba6669886b9943fa9c61bcdaac577017638737c19f35a0d0b",
    strip_prefix = "libexpat-654d2de0da85662fcc7644a7acd7c2dd2cfb21f0",
    build_file = "@//:bazel/expat.bazel",
)

http_archive(
    name = "lsqlite3",
    url = "http://lua.sqlite.org/index.cgi/zip/lsqlite3_fsl09y.zip",
    sha256 = "8c9a722c3d451e7996b8263f4320889f3b27504aeee264ab2dbd2bdfaca08dc7",
    strip_prefix = "lsqlite3_fsl09y",
    build_file = "@//:bazel/lsqlite3.bazel",
)

http_archive(
    name = "luaexpat",
    url = "https://github.com/lunarmodules/luaexpat/archive/90b1af46829ba45a6b772bc66d3355b2e20671b6.tar.gz",
    sha256 = "57135e369ff9cdd71604f108425f71f9c43f44656c328a1a687cedd7270f7c61",
    strip_prefix = "luaexpat-90b1af46829ba45a6b772bc66d3355b2e20671b6",
    build_file = "@//:bazel/luaexpat.bazel",
)

http_archive(
    name = "luafilesystem",
    url = "https://github.com/lunarmodules/luafilesystem/archive/7c6e1b013caec0602ca4796df3b1d7253a2dd258.tar.gz",
    sha256 = "5bddb6971adbc0c48daf913b38ce40168c808c3c33b639ea9a9ddd30a60c85bd",
    strip_prefix = "luafilesystem-7c6e1b013caec0602ca4796df3b1d7253a2dd258",
    build_file = "@//:bazel/luafilesystem.bazel",
)

http_archive(
    name = "luassert",
    url = "https://github.com/lunarmodules/luassert/archive/8c9385b1a1944a5ce0ef9dbd721ad1987cf85e9d.tar.gz",
    sha256 = "49e200b154d8347fac02a846359ad29b3b64a0510ed06287dc6954333f201e86",
    strip_prefix = "luassert-8c9385b1a1944a5ce0ef9dbd721ad1987cf85e9d",
    build_file = "@//:bazel/luassert.bazel",
)

http_archive(
    name = "lyaml",
    url = "https://github.com/gvvaughan/lyaml/archive/1afb1f870ae486097f79586502f4254d6074afcb.tar.gz",
    sha256 = "74f347f16514a6c70ec22bfaf0e4e0de87a0d434191111642560de93ab312efc",
    strip_prefix = "lyaml-1afb1f870ae486097f79586502f4254d6074afcb",
    build_file = "@//:bazel/lyaml.bazel",
)

http_archive(
    name = "lzlib",
    url = "https://github.com/luadist/lzlib/archive/79329a07d8f79c19eadd7ea2752b4c4e1574b015.tar.gz",
    sha256 = "b0be6ff887470a0579a9673c418082ddeb7df8b991a6a9a841ce190a55932be0",
    strip_prefix = "lzlib-79329a07d8f79c19eadd7ea2752b4c4e1574b015",
    build_file = "@//:bazel/lzlib.bazel",
)

http_archive(
    name = "penlight",
    url = "https://github.com/lunarmodules/penlight/archive/3bf03267b2571ba3cfa676a10528dd7b9a0db404.tar.gz",
    sha256 = "e4e300221a37731336eedc812da359692896cace01720ff917be4491f1c728f9",
    strip_prefix = "Penlight-3bf03267b2571ba3cfa676a10528dd7b9a0db404",
    build_file = "@//:bazel/penlight.bazel",
)

http_archive(
    name = "puclua",
    url = "http://www.lua.org/ftp/lua-5.1.5.tar.gz",
    sha256 = "2640fc56a795f29d28ef15e13c34a47e223960b0240e8cb0a82d9b0738695333",
    strip_prefix = "lua-5.1.5",
    build_file = "@//:bazel/puclua.bazel",
)

http_archive(
    name = "say",
    url = "https://github.com/lunarmodules/say/archive/3e1f783d0aa496eb21d16e85b2235335cb9332df.tar.gz",
    sha256 = "ab1e2e662114358f758103785d0f56a1f8fb764564b0163290f2270cf976a094",
    strip_prefix = "say-3e1f783d0aa496eb21d16e85b2235335cb9332df",
    build_file = "@//:bazel/say.bazel",
)

http_archive(
    name = "sqlite3",
    url = "https://www.sqlite.org/2023/sqlite-amalgamation-3410200.zip",
    sha256 = "01df06a84803c1ab4d62c64e995b151b2dbcf5dbc93bbc5eee213cb18225d987",
    strip_prefix = "sqlite-amalgamation-3410200",
    build_file = "@//:bazel/sqlite3.bazel",
)

http_archive(
    name = "utf8h",
    url = "https://github.com/sheredom/utf8.h/archive/ce48f0eda6cac8f365837edaf8298ad5c03f7f2e.tar.gz",
    sha256 = "d1664cd25e7b322b030a029bd05adca94bf6eafc7b553d33b18409573d7cd330",
    strip_prefix = "utf8.h-ce48f0eda6cac8f365837edaf8298ad5c03f7f2e",
    build_file = "@//:bazel/utf8h.bazel",
)

http_archive(
    name = "yaml",
    url = "https://github.com/yaml/libyaml/archive/2c891fc7a770e8ba2fec34fc6b545c672beb37e6.tar.gz",
    sha256 = "77987051b6f5bee8ba472f1efbe0053663a58d8d3e7a2f0f4a27d178adbf8844",
    strip_prefix = "libyaml-2c891fc7a770e8ba2fec34fc6b545c672beb37e6",
    build_file = "@//:bazel/yaml.bazel",
)
